# plem-stereolabs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  VENDOR_SOURCE.md  package.xml
.claude/references/: zed-dds-network.md  zed-optimization.md  zed-recording.md  zed-robot-integration.md  zed-ros2-api-reference.md  zed-usage-guide.md  zed-yolo-config.md  zed-yolo-integration-guide.md  zed-yolo-integration.md
.claude/rules/: 01-description-tier2.md  description-tier2.md  zed-camera.md  zed-usage-guide.md  zed-yolo.md
.github/workflows/: ci.yml
docs/: README.en.md
urdf/: zed_macro.urdf.xacro  zedxm.xacro
