<?xml version="1.0"?>
<package format="3">
  <name>stereolabs_description</name>
  <version>0.1.0</version>
  <description>Stereolabs camera URDF descriptions and meshes</description>
  <maintainer email="dev@neuromeka.com">Neuromeka</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
