<?xml version="1.0"?>
<package format="3">
  <name>stereolabs_description</name>
  <version>0.2.0</version>
  <description>Stereolabs camera URDF descriptions and meshes</description>
  <maintainer email="wim@wimcorp.co.kr">WIM Corporation</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
